addedcross browser scrollbar fix

--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,6 @@ a:focus {
 #showGallery {
   position: absolute;
   top: 47%;
-  right: 18.5px;
   color: rgba(255, 255, 255, 0.85);
   -webkit-transition: color 0.1s, -webkit-transform 0.2s;
   transition: color 0.1s, -webkit-transform 0.2s;
